kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-java
spec:
  selector:
    app: demo-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
