kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-java
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo-java.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-java
                port:
                  number: 80
